--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,22 +1,41 @@
-# The name of our workflow
-name: Build
-
-# Trigger on every pull request
-on: pull_request
+name: Android Pull Request & Master CI
 
 on:
-  # Trigger on every pull request and on push
-  # to the `main` branch.
   pull_request:
+    branches:
+      - 'cicd/login'
   push:
     branches:
-      - cicd/login
+      - 'cicd/login'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
+
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-      - name: Build the app
-        run: ./gradlew build
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
+
+  apk:
+    name: Generate APK
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build debug APK
+        run: bash ./gradlew assembleDebug --stacktrace
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: app/build/outputs/apk/debug/app-debug.apk
