--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,33 @@ on:
       - 'cicd/login'
 
 jobs:
+  wrapper:
+    name: Create wrapper
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Create wrapper
+        run: gradle wrapper
+
+  wrapper:
+    name: build
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Create wrapper
+        run: gradle build
+
+
   test:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
