--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Create wrapper
         run: gradle wrapper
 
-  wrapper:
+  build:
     name: build
     runs-on: ubuntu-18.04
 
