--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,34 +9,7 @@ on:
       - 'cicd/login'
 
 jobs:
-  wrapper:
-    name: Create wrapper
-    runs-on: ubuntu-18.04
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Create wrapper
-        run: gradle wrapper
-
-  build:
-    name: build
-    runs-on: ubuntu-18.04
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Create wrapper
-        run: gradle build
-
-
-  test:
+  Build:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
 
@@ -46,19 +19,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Create wrapper
+        run: bash ./gradlew test --stacktrace
+      - name: Build app
+        run:
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
-
-  apk:
-    name: Generate APK
-    runs-on: ubuntu-18.04
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
@@ -66,3 +32,20 @@ jobs:
         with:
           name: app
           path: app/build/outputs/apk/debug/app-debug.apk
+#  apk:
+#    name: Generate APK
+#    runs-on: ubuntu-18.04
+#
+#    steps:
+#      - uses: actions/checkout@v1
+#      - name: set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Build debug APK
+#        run: bash ./gradlew assembleDebug --stacktrace
+#      - name: Upload APK
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: app
+#          path: app/build/outputs/apk/debug/app-debug.apk
