--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExerciseActivity"></activity>
+        <activity android:name=".ExerciseActivity" />
         <activity android:name=".RepsInTimeActivity" />
         <activity android:name=".RepsActivity" />
-        <activity android:name=".AddWorkoutActivity" />
+        <activity
+            android:name=".AddWorkoutActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity android:name=".TimerActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".WorkoutActivity" />
