--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StringActivity"></activity>
+        <activity android:name=".ModifyWorkoutActivity"></activity>
+        <activity android:name=".StringActivity" />
         <activity android:name=".ExerciseActivity" />
         <activity android:name=".RepsInTimeActivity" />
         <activity android:name=".RepsActivity" />
