--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModifyWorkoutActivity"></activity>
+        <activity
+            android:name=".ModifyWorkoutActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity android:name=".StringActivity" />
         <activity android:name=".ExerciseActivity" />
         <activity android:name=".RepsInTimeActivity" />
