--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.firsttry">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_better"
@@ -9,6 +12,7 @@
         android:roundIcon="@drawable/logo_better"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".calendar"></activity>
         <activity
             android:name=".AddWorkout2"
@@ -16,6 +20,9 @@
         <activity
             android:name=".ModifyWorkoutActivity"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+        <activity
+        android:name=".ModifyWorkoutBetter"
+        android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity android:name=".StringActivity" />
         <activity
             android:name=".ExerciseActivity"
