--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
 
+    namespace "com.example.firsttry"
+
     defaultConfig {
         applicationId "com.example.firsttry"
         minSdkVersion 14
